--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <section class="calc">
         <div class="calc__container">
             <div class="calc__screen">
-
+                <h3 id="calc__screen__prev"></h3>
+                <h1 id="calc__screen__readout"></h1>
             </div>
             <div class="calc__container2">
                 <ul class="calc__keys">
@@ -43,6 +44,7 @@
                     <li class="calc__button" id="+"><i class="fa-solid fa-plus"></i></li>
                     <li class="calc__button" id="="><i class="fa-solid fa-equals"></i></li>
                 </ul>
+                <button id="clear">Clear</button>
             </div>
         </div>
     </section>
